- New cell container in DS_Container.h.
- TDS uses DS_Container.
- Remove list pointer from ds_cell, to make it more compact.
- Circulators don't store a TDS* anymore as it's not used.
- ds_cell_iterator removed, replaced by DS_Container::iterator.
- other ds_iterators use the one above internally, also don't derive from
  Triangulation_utils_3.
- const correctness fixes.

Version 1.83 (3 August 01)
- Susan added missing .gif and .eps files in the doc_tex/*_ref directories

Version 1.82 (1 August 01)
- Susan moved the doc_tex/*_ref directories up one level and changed htmlfiles
  accordingly

Version 1.81 (31 July 01)
- ds_cell doesn't derive from Triangulation_util_3 anymore, as this wasted
  memory for nothing with GCC 2.95.

Version 1.80 (27 July 01)
- Susan moved the TDS documentation to its own directory, eliminating one
  level of subdirectories
- also made changes necessary for manual split

Version 1.79 (25 July 01)
- Short names in the examples for VC++.

Version 1.78 (23 July 01)
- traits concepts doc modified according to the corresponding modifications
  in the code
- fix: CGAL::make_object no longer used, it is taken from the traits instead

Version 1.77 (20 July 01)
- Don't put the traits' function objects as data members of the
  triangulations.

Version 1.76 (19 July 01)
- Make demos and examples use Filtered_kernel.

Version 1.75 (18 July 01)
- Fix return type of Compare_distance_3 in the HierarchyTraits_3 doc.
- Remove constructors for vertices in the doc.
- Fix mirror_vertex() and mirror_index().
- Replace Coplanar_orientation_3 taking 4 points, by the one taking 3 points.
- Remove Collinear_3 from the traits.

Version 1.74 (13 July 01)
- copy_tds() cleanups.
- replace delete Cell by delete_cell() in Regular.

Version 1.73 (13 July 01)
- print_cells and read_cells small cleanup.
- With VC++, MP_Float.h must be included before Filtered_exact.h.
- Small cleanups for order_of_creation.

Version 1.72 (10 July 01)