@@ -10,6 +10,8 @@ Version 1.84 (?? August 01)
 - other ds_iterators use the one above internally, also don't derive from
   Triangulation_utils_3.
 - const correctness fixes.
+- New function Triangulation_3<>::collinear_position() which is a cleaner
+  replacement of all calls to compare_[xyz].
 
 Version 1.83 (3 August 01)
 - Susan added missing .gif and .eps files in the doc_tex/*_ref directories
